# agent3

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  board.html  config.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: rust-patterns.instructions.md  vue-tauri-bridge.instructions.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: ARCHITECTURE.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/components/: DownloadButton.vue  HeroHome.vue
docs/.vitepress/theme/: custom.css  index.ts
scripts/: memory_regression_checks.sh
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json  zh.json
src-tauri/src/: db.rs  i18n.rs  keystore.rs  lib.rs  main.rs  system_api.rs  tray.rs
src-tauri/src/agent/: ambient.rs  audio.rs  memory.rs  memory_injection.rs  memory_tools.rs  mod.rs  playback.rs  realtime_ws.rs  scheduler.rs  session.rs  subagents.rs  task_manager.rs  tools.rs  wakeword.rs  web_tools.rs
src/board/: BoardApp.vue  main.ts
src/config/: ConfigApp.vue  main.ts
src/core/: AgentBridge.ts
src/i18n/: en.json  index.ts  zh.json
