[package]
name = "agent3"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
arboard = "3.4"
tokio = { version = "1", features = ["full", "process"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls-vendored"] }
base64 = "0.22"
futures-util = "0.3"
log = "0.4"
urlencoding = "2"
open = "5"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored", "rustls-tls", "blocking"] }
uuid = { version = "1", features = ["v4"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
cpal = "0.15"
rustpotter = { git = "https://github.com/GiviMAD/rustpotter", tag = "v2.0.0" }
hound = "3.5"
chrono = "0.4"
sys-locale = "0.3"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
html2md = "0.2.15"
select = "0.6.1"
url = "2.5.8"

